[gd_scene load_steps=6 format=3 uid="uid://c48bkguay5nk5"]

[ext_resource type="Script" path="res://UIElements/credits.gd" id="1_m2nre"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ia36"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ws8u"]
bg_color = Color(0.0784314, 0.0862745, 0.109804, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xbd7e"]
bg_color = Color(0.211765, 0.235294, 0.301961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nu8qt"]
bg_color = Color(0.35, 0.39, 0.5, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="Credits" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.0
offset_top = -97.5
offset_right = 290.0
offset_bottom = 97.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8ia36")
script = ExtResource("1_m2nre")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 28
theme_override_constants/margin_top = 28
theme_override_constants/margin_right = 28
theme_override_constants/margin_bottom = 28

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(520, 0)
layout_mode = 2
theme_override_constants/separation = 4

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer" groups=["PopupTitle"]]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Credits"

[node name="Text" type="RichTextLabel" parent="MarginContainer/VBoxContainer" groups=["PopupText"]]
layout_mode = 2
bbcode_enabled = true
text = "This game was made over the course of 5 days as part of Spelkollektivet's Halloween Game Jam 2023.
- Florian van Strien
- Bosco Bartilomo
- Audio: Lin Viberg

Check out our other games below. A wishlist would be very welcome!
[url=https://store.steampowered.com/app/2562020/WorldShaper_Idle/]WorldShaper Idle by Florian van Strien[/url]
[url=https://store.steampowered.com/app/2663150/Valkyrie_Saga/]Some kinda PSX Platformer[/url]
"
fit_content = true
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer" groups=["PopupWindowClose"]]
visible = false
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer" groups=["PopupWindowClose"]]
visible = false
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_5ws8u")
theme_override_styles/hover = SubResource("StyleBoxFlat_xbd7e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nu8qt")
text = "Restart"

[node name="AreYouSure" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_5ws8u")
theme_override_styles/hover = SubResource("StyleBoxFlat_xbd7e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nu8qt")
text = "Are You Sure?"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_5ws8u")
theme_override_styles/hover = SubResource("StyleBoxFlat_xbd7e")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nu8qt")
text = "Close"

[connection signal="meta_clicked" from="MarginContainer/VBoxContainer/Text" to="." method="_on_text_meta_clicked"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AreYouSure" to="." method="_on_are_you_sure_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
